# eliza-rs

./: .travis.yml  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
scripts/: doctor.json  pirate.json  rogerian_psychiatrist.json
scripts/rogerian_psychiatrist/: fallbacks.json  farewells.json  greetings.json  keywords.json  reflections.json  synonyms.json  transformations.json  transforms.json
src/: alphabet.rs  eliza.rs  fallbacks.rs  farewells.rs  greetings.rs  keywords.rs  lib.rs  main.rs  messages.rs  reflections.rs  script.rs  script_loader.rs  synonyms.rs  transforms.rs
tests/: conversation_test.rs
