[package]
name = "eliza"
version = "1.0.0"
authors = ["arosspope <andrew.pope456@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/arosspope/eliza-rs.git"
repository = "https://github.com/arosspope/eliza-rs.git"
description = "A rust implementation of ELIZA - a natural language processing program developed by Joseph Weizenbaum in 1966."
keywords = ["eliza", "nlp", "weizenbaum", "linguistics", "chatbot"]
categories = ["algorithms", "text-processing"]
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "scripts/doctor.json"]

[[bin]]
name = "eliza"
doc = false

[dependencies]
regex = "0.2"
rand = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.3"
env_logger = "0.3"
