[package]
name = "eliza"
version = "1.1.1"
authors = ["arosspope <andrew.pope456@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/arosspope/eliza-rs.git"
repository = "https://github.com/arosspope/eliza-rs.git"
description = "A rust implementation of ELIZA - a natural language processing program developed by Joseph Weizenbaum in 1966."
keywords = ["eliza", "nlp", "weizenbaum", "linguistics", "chatbot"]
categories = ["algorithms", "text-processing"]
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "scripts/doctor.json"]

[[bin]]
name = "eliza"
doc = false

[dependencies]
regex = "*"
rand = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
log = "*"
env_logger = "*"
